Update composer JSON

--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,43 @@
 {
+    "name": "202-ecommerce/stripe_official",
+    "description": "PrestaShop module Stripe Official",
+    "homepage": "https://stripe.com/",
+    "license": "AFL-3.0",
+    "authors": [
+        {
+            "name": "202 ecommerce",
+            "email": "tech@202-ecommerce.com"
+        }
+    ],
     "config": {
-        "prepend-autoloader": false
+        "preferred-install": "dist",
+        "classmap-authoritative": true,
+        "optimize-autoloader": true,
+        "prepend-autoloader": false,
+        "platform": {
+            "php": "5.6"
+        }
     },
-	"require": {
-		"stripe/stripe-php": "^7.33"
-	},
+    "require": {
+        "php": ">=5.6.0",
+        "stripe/stripe-php": "^7.33"
+    },
+    "require-dev": {
+        "prestashop/php-dev-tools": "^3.4"
+    },
     "autoload": {
         "psr-4": {
-          "Stripe_officialClasslib\\": "vendor/totpsclasslib/src/"
+            "Stripe_officialClasslib\\": "vendor/totpsclasslib/src/"
         },
         "classmap": [
-            "classes/"
-        ]
+            "classes/",
+            "controllers/"
+        ],
+        "files": [],
+        "exclude-from-classmap": []
     },
     "scripts": {
         "pre-autoload-dump": "if [ ${TOTPSCLASSLIB_DEV_PATH} ]; then php ${TOTPSCLASSLIB_DEV_PATH}/classlib/refresh.php .; fi"
-    }
+    },
+    "type": "prestashop-module"
 }
