--- a/202/build.xml
+++ b/202/build.xml
@@ -7,7 +7,7 @@
     <property name="TARGETBRANCH" value="${env.GIT_BRANCH}" />
     <property name="TARGETVERSION" value="2.4.3" />
     <property name="PHPVERSION" value="5.6" />
-    <property name="PSVERSION" value="1.7.5.x" />
+    <property name="PSVERSION" value="1.7.2.5" />
 
     <target name="build" depends="build-common,package-zip,psvalidator,tot-testing" />
 
