--- a/202/build.xml
+++ b/202/build.xml
@@ -9,7 +9,7 @@
     <property name="PHPVERSION" value="5.6" />
     <property name="PSVERSION" value="1.7.2.5" />
 
-    <target name="build" depends="build-common,package-zip,psvalidator,tot-testing" />
+    <target name="build" depends="build-common,package-zip,psvalidator" />
 
     <target name="build-common" depends="lint,prepare,composer,npm,doc" />
 
