--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "stripe_official",
   "version": "2.4.3",
   "description": "Stripe official Module",
+  "main": "webpack.config.js",
   "scripts": {
     "watch": "webpack --mode development --colors --devtool source-map --hide-modules -w",
     "build": "webpack --mode production --colors --devtool source-map --progress -p",
@@ -16,35 +17,29 @@
     "stripe_official"
   ],
   "homepage": "https://github.com/",
+  "author": "202-ecommerce",
+  "license": "SEE LICENSE IN stripe_official.php",
   "devDependencies": {
-    "@babel/core": "^7.13.8",
-    "@babel/preset-env": "^7.13.9",
-    "autoprefixer": "^9.8.6",
-    "babel-loader": "^8.2.2",
-    "browser-sync": "^2.26.14",
-    "browser-sync-webpack-plugin": "^2.3.0",
-    "browserslist": "^4.16.5",
-    "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^1.0.0",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.2.0",
-    "eslint-plugin-html": "^5.0.5",
-    "eslint-plugin-import": "^2.22.1",
-    "mini-css-extract-plugin": "^0.4.3",
-    "node-sass": "^7.0.0",
-    "npm-run-all": "^4.1.5",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/runtime": "^7.5.5",
+    "@babel/runtime-corejs3": "^7.5.5",
+    "autoprefixer": "^9.6.1",
+    "babel-loader": "^8.0.6",
+    "core-js": "^3.1.4",
+    "css-loader": "^3.2.0",
+    "file-loader": "^4.2.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
-    "sass-loader": "^7.3.1",
-    "style-loader": "^0.23.0",
-    "stylelint": "^14.1.0",
-    "stylelint-checkstyle-formatter": "^0.1.2",
-    "stylelint-config-twbs-bootstrap": "^3.0.1",
-    "stylemark": "^3.1.7",
-    "terser-webpack-plugin": "^1.4.5",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-fix-style-only-entries": "^0.2.2"
-  },
-  "dependencies": {}
+    "sass-loader": "^7.1.0",
+    "style-loader": "^1.0.0",
+    "stylelint": "^10.1.0",
+    "stylelint-config-twbs-bootstrap": "^0.4.0",
+    "terser-webpack-plugin": "^1.4.1",
+    "webpack": "^4.39.1",
+    "webpack-cli": "^3.3.6",
+    "webpack-fix-style-only-entries": "^0.3.0"
+  }
 }
