--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,5 +1,5 @@
 name: Coding Standart
-on: [push,pull_request]
+on: [pull_request]
 jobs:
     # Check there is no syntax errors in the project
     php-linter:
